fix mail chimp alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,33 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 
+html, body {
+    height: 100%;
+  }
+
+body {
+display: flex;
+flex-direction: column;
+}
+
+.content {
+    flex: 1 0 auto;
+}
+
+.footer {
+    flex-shrink: 0;
+}
+
 .staff{
     color:goldenrod;
     font-weight:bold;
+}
+
+#mc_embed_signup .foot{
+    display: grid;
+    grid-template-columns: auto;
+    width: 100%;
+    align-items: center;    
 }
 
 /* --Style bag icon--------------------------------------- */
@@ -45,6 +69,26 @@
 #mce-responses{
     width:0;
     margin:0;
+}
+
+.bag-qty{
+    position: absolute;
+    top:0;
+    right:0;
+}
+
+.border-radius-50{
+    border:1px solid black;
+    border-radius:50%;
+}
+
+.bag-qty.border-radius-50{
+    width:20px;
+    height:20px;
+}
+
+.bag-qty-container{
+    position:relative;
 }
 
 /* ---Hide spinners in number fields (W3Schools)-----------*/
